@@ -23,6 +23,4 @@ sk_sp<const GrGLInterface> GrGLMakeNativeInterface() {
             return (GrGLFuncPtr)dlsym(ctx ? ctx : RTLD_DEFAULT, name); });
 }
 
-const GrGLInterface* GrGLCreateNativeInterface() { return GrGLMakeNativeInterface().release(); }
-
 #endif  // SK_BUILD_FOR_MAC
