@@ -31,5 +31,3 @@ static GrGLFuncPtr webgl_get_gl_proc(void* ctx, const char name[]) {
 sk_sp<const GrGLInterface> GrGLMakeNativeInterface() {
     return GrGLMakeAssembledInterface(nullptr, webgl_get_gl_proc);
 }
-
-const GrGLInterface* GrGLCreateNativeInterface() { return GrGLMakeNativeInterface().release(); }
